# ezgo-poc

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .gitignore  API_USAGE.md  BACKEND_READY.md  Dockerfile  README.md  check_unroutable_orders.py  docker-entrypoint.sh  main.py  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_routing_models.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  depots.py  orders.py  route_optimization.py  service_areas.py  service_zones.py  zone_depot_assignments.py
backend/app/core/: config.py  database.py
backend/app/crud/: __init__.py  base.py  depot.py  h3_helper.py  order.py  service_area.py  service_zone.py  zone_depot_assignment.py
backend/app/models/: __init__.py  base.py  depot.py  h3_compact.py  h3_cover.py  order.py  service_area.py  service_zone.py  zone_depot_assignment.py
backend/app/schemas/: __init__.py  depot.py  h3_compact.py  h3_cover.py  order.py  route_optimization.py  service_area.py  service_zone.py  zone_depot_assignment.py
backend/app/scripts/: fix_depots.py  seed.py  seed_all.py  seed_new.py  test_seeded_data.py
backend/app/services/: __init__.py  clustering_service.py  h3_service.py  mapbox_service.py  route_optimization_service.py
backend/misc/: README.md  service_area.csv  service_zones.csv
database/: Dockerfile  README.md  docker-compose.yml  init-extensions.sh
frontend/: Dockerfile  (+6 more)
(+14 files in other folders)
